--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-<!doctype html>
-    <head>
-        <title>Hello World</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>About Me</title>
+  </head>
 
-    <body>
-        <h1>Hey Hey Everyone. Welcome to my world</h1>
-    </body>
+  <body>
+    <header>
+      <h1>Kermit H Bonner IV</h1>
+      <div>This Is Me</div>
+      <div>My Work</div>
+      <div>Get In Touch</div>
+      <br />
+      <h2>ABOUT ME</h2>
+    </header>
+  </body>
+
+  <div>
+    <img src="Horde.png" alt="Horde" width="500" height="333" />
+    <p>
+      Hey every one. My name is Kermit Bonner im a fourth generation Kermit.
+      Every one I know calls me Chris or Kerm tho. I am an aspireing developer.
+      I have a 2 year old daughter named Charlie. She is the main reason I am
+      pursuing a career in web development. I have a background in customer
+      facing and sales. I bring a technical background to a professional
+      salesman. I can interact with any customer, speak with large groups and
+      able to interact well with a development team.
+    </p>
+    <p>
+      I have a major passion for anything copetitive. I think that's what made
+      me such a good salesman. I love just about all professional sports
+      expecillay football and baseball. I'm a avid fantasy football nut. I stay
+      up to date with as many video games as possible.
+    </p>
+  </div>
 </html>
